--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   just_audio: ^0.9.20
+  screenshot: ^1.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
